--- a/willkommen/Style/main/Button/button.css
+++ b/willkommen/Style/main/Button/button.css
@@ -1,6 +1,5 @@
 *, *:before, *:after {
   box-sizing: border-box;
-  padding: 0;
 }
 
 .buttons {
@@ -33,7 +32,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #ffffff;
+  border: 2px solid #0505A9;
   border-radius: 30px;
 }
 .blob-btn:after {
