--- a/willkommen/Style/main/mainStyle.css
+++ b/willkommen/Style/main/mainStyle.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 body {
-  overflow: hidden;
   font-family: "Rubik";
   -webkit-animation: theme 21s linear infinite;
           animation: theme 21s linear infinite;
@@ -135,6 +134,7 @@ nav {
   top: 0;
   background: rgb(255, 255, 255);
   padding: 3px;
+  position: absolute;
 }
 nav ul.left-menu {
   list-style-type: none;
@@ -181,6 +181,7 @@ nav li a:hover {
     height: auto;
     width: 80%;
     padding: 0;
+    position: absolute;
   }
   .navbar nav .logo {
     margin-top: 50px;
