--- a/Projects/Project/Project.css
+++ b/Projects/Project/Project.css
@@ -1,1 +1,57 @@
-/*# sourceMappingURL=Project.css.map */
+.Box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.Box #demo {
+  margin-top: 5%;
+  margin-left: 40px;
+  box-shadow: 0px 1px 59px 14px rgba(0, 0, 0, 0.52);
+  -webkit-box-shadow: 0px 1px 59px 14px rgba(0, 0, 0, 0.52);
+  -moz-box-shadow: 0px 1px 59px 14px rgba(0, 0, 0, 0.52);
+  border-radius: 30px 30px 30px 30px;
+  height: 300px;
+  width: 300px;
+}
+.Box #demo:hover {
+  box-shadow: 0px 1px 30px 2px rgb(252, 252, 252);
+  transition: 0.5s ease;
+}
+.Box .ButtonPlay {
+  margin-top: 140px;
+  margin-left: 100px;
+  background-color: #44c767;
+  border-radius: 28px;
+  border: 1px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 17px;
+  padding: 16px 31px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+.Box .ButtonPlay:hover {
+  background-color: #5cbf2a;
+}
+.Box .ButtonPlay:active {
+  position: relative;
+  top: 1px;
+}
+.Box .Play {
+  opacity: 0;
+  border-radius: 30px 30px 30px 30px;
+  height: 300px;
+  width: 300px;
+  background: rgba(0, 0, 0, 0.377);
+}
+.Box .Play .__text {
+  cursor: pointer;
+  padding: 140px 32px;
+  text-align: center;
+}
+.Box .Play:hover {
+  transition: 0.5s ease;
+  opacity: 1;
+}/*# sourceMappingURL=Project.css.map */
