--- a/Projects/Project/Project.css
+++ b/Projects/Project/Project.css
@@ -18,7 +18,7 @@
   transition: 0.5s ease;
 }
 .Box .ButtonPlay {
-  margin-top: 120px;
+  margin-top: 245px;
   margin-left: 100px;
   background-color: #44c767;
   border-radius: 28px;
@@ -31,6 +31,7 @@
   padding: 16px 31px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #2f6627;
+  transition: 0.5s ease;
 }
 .Box .ButtonPlay:hover {
   background-color: #5cbf2a;
@@ -45,8 +46,13 @@
   height: 300px;
   width: 300px;
   background: rgba(0, 0, 0, 0.377);
+  transition: 0.5s ease;
 }
 .Box .Play:hover {
   transition: 0.5s ease;
   opacity: 1;
+}
+.Box .Play:hover .ButtonPlay {
+  transition: 0.5s ease;
+  margin-top: 120px;
 }/*# sourceMappingURL=Project.css.map */
