--- a/Style/main/text.css
+++ b/Style/main/text.css
@@ -1,57 +1,30 @@
 .text{
-    text-align: center;
+  border: 1px solid #ffffff;
+
+
+  -webkit-box-shadow: 5px 5px 15px 5px #0000005d; 
+ box-shadow: 5px 5px 15px 5px #00000063;
+ -webkit-border-radius:25px;
+-moz-border-radius: 25px;
+border-radius: 25px;
+background: white;
+ padding: 10px;
+
+display:flex; 
+justify-content:center;
+
+
+
    }
-     .c1{
-       display: inline-block;
-     }
-     .c2{
-         display: inline-block;
-     }
-     .c3{
-   
-       display: inline-block;
-   
-     }
-     .c4{
-       display: inline-block;
-     }
-   
-   .type{
-       font-family: 'Play';
-   
-         font-size: 1.5rem;
-         overflow: hidden;
-         border-right: .15em solid orange;
-         white-space: nowrap; 
-         width: 0;
-         animation: 
-           typing 1s steps(25, end) forwards;
-     }
-     .type2{
-         font-size: 1.5rem;
-         overflow: hidden;
-         border-right: .15em solid orange;
-         white-space: nowrap; 
-         width: 0;
-         animation: 
-           typing 1s steps(25, end) forwards;
-         animation-delay: 1s;
-     }
-     .type3{
-       font-size: 1.5rem;
-         overflow: hidden;
-         border-right: .15em solid orange; 
-         white-space: nowrap; 
-         width: 0;
-         animation: 
-           typing 1s steps(25, end) forwards;
-         animation-delay: 2s;
-     }
-     @keyframes typing {
-        from { width: 0 }
-        to { width: 100% }
-      }
-      @keyframes blink {
-        from { border-color: transparent }
-        to { border-color: orange; }
-      }
+
+.textH{
+  text-align: center ;
+  font-size: 1em;
+  right: 45%;
+}
+@media only screen and (min-width: 750px) {
+
+
+
+
+}
