--- a/Style/main/Button/button.scss
+++ b/Style/main/Button/button.scss
@@ -5,8 +5,10 @@
   
   .buttons {
     text-align: center;
-    border-radius:30px;
+    margin-top: 10px;
+
   }
+
   
   $cyan: #0505A9;
   $dark: #FFFFFF;
@@ -29,6 +31,7 @@
     transition: color 0.5s;
     cursor: pointer;
     border-radius:30px;
+    -webkit-box-shadow: 5px 5px 15px 5px #0000005d;
     
     &:before {
       content: "";
