--- a/Style/main/mainStyle.css
+++ b/Style/main/mainStyle.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 body {
+  border-radius: 25px;
   font-family: "Rubik";
   -webkit-animation: theme 21s linear infinite;
           animation: theme 21s linear infinite;
@@ -95,6 +96,7 @@ body:before {
   border-radius: 40px 0px 0px 40px;
   background: white;
   padding: 1em;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.3882352941);
 }
 .navbar .logo {
   text-decoration: none;
@@ -125,13 +127,10 @@ nav.menu_HIDDEN {
 }
 
 nav {
-  border-radius: 20px 0px 0px 20px;
-  margin-top: 8px;
-  position: fixed;
+  border-radius: 20px 0px 20px 20px;
+  margin-top: 0px;
   z-index: 999;
-  width: 25%;
-  right: 0;
-  top: 0;
+  width: 90%;
   background: rgb(255, 255, 255);
   padding: 3px;
   position: absolute;
@@ -140,11 +139,12 @@ nav ul.left-menu {
   list-style-type: none;
   margin-top: auto;
   font-size: 70%;
-  justify-content: unset;
+  padding-left: 0;
 }
 nav ul.right-menu {
   list-style-type: none;
   font-size: 70%;
+  padding-left: 0;
 }
 nav li a {
   list-style: none;
@@ -182,6 +182,9 @@ nav li a:hover {
     width: 80%;
     padding: 0;
     position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 10px;
   }
   .navbar nav .logo {
     margin-top: 50px;
@@ -196,9 +199,14 @@ nav li a:hover {
   .navbar nav ul.left-menu {
     margin: 16px;
     font-size: 1em;
+    padding-left: 10px;
   }
   .navbar nav ul.right-menu {
     font-size: 1em;
+  }
+
+  .WelcomePng {
+    right: 0;
   }
 }
 .Welcome {
