--- a/Style/main/mainStyle.scss
+++ b/Style/main/mainStyle.scss
@@ -123,19 +123,19 @@ nav{
     border-radius: 20px 0px 20px 20px;
     margin-top: 0px;
     z-index: 999;
-    width: 90%;
+    width: 50%;
+    height: auto;
     background: rgb(255, 255, 255);
     padding: 3px;
+    margin-left: 42%;
     position: absolute;
-    
 
-    
     
     
      ul.left-menu{
         list-style-type: none;
-        margin-top: auto;
-        font-size: 70%;
+        margin-top: 10px;
+        font-size: 90%;
         padding-left: 0;
         
 
