--- a/Style/main/text.css
+++ b/Style/main/text.css
@@ -8,7 +8,8 @@
 -moz-border-radius: 25px;
 border-radius: 25px;
 background: white;
- padding: 10px;
+ padding: 8px;
+ padding-top: 0;
 
 display:flex; 
 justify-content:center;
@@ -22,6 +23,8 @@ justify-content:center;
   font-size: 1em;
   right: 45%;
 }
+
+
 @media only screen and (min-width: 750px) {
 
 
