--- a/Projects/Project/Project.scss
+++ b/Projects/Project/Project.scss
@@ -68,7 +68,7 @@
         background: rgba(0, 0, 0, 0.377);
         transition: .5s ease;
 
-        &:hover{
+        &:active{
 
             .ButtonPlay{
                 transition: .5s ease;
@@ -79,6 +79,5 @@
             opacity: 1;
         }
             
-
     }
 }
