--- a/Projects/Project/Project.scss
+++ b/Projects/Project/Project.scss
@@ -68,7 +68,7 @@
         background: rgba(0, 0, 0, 0.377);
         transition: .5s ease;
 
-        &:active{
+        &:focus{
 
             .ButtonPlay{
                 transition: .5s ease;
