--- a/Projects/Project/Project.scss
+++ b/Projects/Project/Project.scss
@@ -24,6 +24,7 @@
         &:hover{
         box-shadow: 0px 1px 30px 2px rgb(252, 252, 252);
         transition: .5s ease;
+
         }
 
         }   
@@ -46,6 +47,7 @@
             text-decoration:none;
             text-shadow:0px 1px 0px #2f6627;
             transition: .5s ease;
+
             
             &:hover {
             
@@ -59,7 +61,7 @@
         }
 
         .Play{
-        opacity: 0;
+        opacity:0;
         -webkit-border-radius: 30px 30px 30px 30px; 
         -moz-border-radius: 30px 30px 30px 30px;
         border-radius: 30px 30px 30px 30px;
@@ -68,16 +70,31 @@
         background: rgba(0, 0, 0, 0.377);
         transition: .5s ease;
 
-        &:focus{
-
+            &:hover {
             .ButtonPlay{
                 transition: .5s ease;
                 margin-top: 120px;
                 
+             }
+
+             opacity: 1;
             }
-            transition: .5s ease;
-            opacity: 1;
+           
         }
-            
+
+        
     }
+
+.monile-forceOpacity {
+    opacity: 1.0;
 }
+
+
+@keyframes mymove {
+
+    to {
+            transition: .5s ease;
+            margin-top: 120px;
+            
+        }
+  }
