--- a/Projects/Project/Project.scss
+++ b/Projects/Project/Project.scss
@@ -4,13 +4,16 @@
     justify-content: center;
     flex-wrap: wrap;
 
+
+
+
+    
     
 
     #demo {
 
-
+        margin-left: 0px;
         margin-top:5%;
-        margin-left: 40px;
         box-shadow: 0px 1px 59px 14px rgba(0,0,0,0.52);
         -webkit-box-shadow: 0px 1px 59px 14px rgba(0,0,0,0.52);
         -moz-box-shadow: 0px 1px 59px 14px rgba(0,0,0,0.52);
@@ -29,72 +32,80 @@
 
         }   
 
-
-
-
-        .ButtonPlay{
-            margin-top: 245px;
-            margin-left: 100px;
-            background-color:#44c767;
-            border-radius:28px;
-            border:1px solid #18ab29;
-            display:inline-block;
-            cursor:pointer;
-            color:#ffffff;
-            font-family:Arial;
-            font-size:17px;
-            padding:16px 31px;
-            text-decoration:none;
-            text-shadow:0px 1px 0px #2f6627;
-            transition: .5s ease;
-
-            
-            &:hover {
-            
-                background-color:#5cbf2a;
-            }
-            &:active {
-                position:relative;
-                top:1px;
-            }
-            
-        }
-
-        .Play{
-        opacity:0;
-        -webkit-border-radius: 30px 30px 30px 30px; 
-        -moz-border-radius: 30px 30px 30px 30px;
-        border-radius: 30px 30px 30px 30px;
-        height: 300px;
-        width:300px ;
-        background: rgba(0, 0, 0, 0.377);
-        transition: .5s ease;
-
-            &:hover {
-            .ButtonPlay{
-                transition: .5s ease;
-                margin-top: 120px;
+        @media only screen and (min-width: 600px) {
+            #demo{
                 
-             }
+     
+                margin-left:40px;
+                .Play{
 
-             opacity: 1;
+                    opacity: 0;
+                    -webkit-border-radius: 30px 30px 30px 30px; 
+                    -moz-border-radius: 30px 30px 30px 30px;
+                    border-radius: 30px 30px 30px 30px;
+                    height: 300px;
+                    width:300px ;
+                    background: rgba(0, 0, 0, 0.377);
+                    transition: .5s ease;
+            
+                        &:hover {
+                        .ButtonPlay{
+                            transition: .5s ease;
+                            margin-top: 120px;
+                            opacity: 1;
+                         }
+            
+                         opacity: 1;
+                        }
+                    }
+
+                    .mTest{
+
+                        display: none;
+                    }
             }
-           
-        }
 
+            .ButtonPlay{
+ 
+                margin-top: 245px;
+                margin-left: 100px;
+                background-color:#44c767;
+                border-radius:28px;
+                border:1px solid #18ab29;
+                display:inline-block;
+                cursor:pointer;
+                color:#ffffff;
+                font-family:Arial;
+                font-size:17px;
+                padding:16px 31px;
+                text-decoration:none;
+                text-shadow:0px 1px 0px #2f6627;
+                transition: .5s ease;
+    
+                
+                &:hover {
+                
+                    background-color:#5cbf2a;
+                }
+                &:active {
+                    position:relative;
+                    top:1px;
+                }
+                
+            }
+          }
+
+          .ButtonPlay{
+
+            opacity: 0;
+          }
         
     }
 
-.monile-forceOpacity {
-    opacity: 1.0;
-}
+    .mTest{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+        margin-top: 230px;
+    }
 
-
-@keyframes mymove {
-
-    to {
-            transition: .5s ease;
-            margin-top: 120px;
-            
-        }
-  }
