--- a/Style/main/mainStyle.css
+++ b/Style/main/mainStyle.css
@@ -233,25 +233,25 @@ nav li a:hover {
   justify-content: center;
 }
 
-.contentd .logo {
+.contentdd .logoo {
   text-decoration: none;
   font-weight: bold;
   color: black;
   font-size: 2.2em;
   margin: auto;
 }
-.contentd .logo span {
+.contentdd .logoo span {
   color: #1ab4d3;
 }
-.contentd .telegram {
+.contentdd .telegram {
+  font-size: 10px;
   margin-top: 10px;
   margin-left: 10px;
   font-family: "Rubik";
 }
-.contentd .discord {
+.contentdd .discord {
   margin-left: 10px;
 }
-.contentd .adis {
-  font-size: 20px;
+.contentdd .adis {
   font-family: "Rubik";
 }/*# sourceMappingURL=mainStyle.css.map */
