--- a/Style/main/mainStyle.scss
+++ b/Style/main/mainStyle.scss
@@ -175,6 +175,9 @@ nav{
 }
 
 @media only screen and (min-width: 750px) {
+
+
+
 .Menu, .Menu-Exit{
     display:none;
 }
@@ -256,9 +259,9 @@ nav{
 // content------------------------------------------------------------------
 
 
-.contentd{
+.contentdd{
 
-.logo {
+.logoo{
     text-decoration: none;
     font-weight: bold;
     color: black;
@@ -266,12 +269,14 @@ nav{
     margin: auto;  
 
        span{
+           
          color: #1ab4d3;
         }
    }
 
    .telegram{
 
+    font-size: 10px;
     margin-top: 10px;
     margin-left: 10px;
     font-family: 'Rubik';
@@ -283,7 +288,7 @@ nav{
    }
 
    .adis{
-    font-size: 20px;
+
     font-family: 'Rubik';
 
     }
